# face-gen

./: .gitignore  pyproject.toml  sample.py  train.py  train_flow_match.py  train_vae.py  train_vae_adv.py
configs/: flow-match-full.yaml  flow_match.yaml  latent-face-gen.yaml  vae-full.yaml  vae.yaml  vit.yaml
src/: config.py  data.py  train.py
src/config/: __init__.py  flow_match.py  util.py  vae.py
src/model/: ConvNeXt.py  ViT.py  __init__.py  conv.py  flow_match.py  transformer.py  util.py  vae.py
