[tool.poetry]
name = "face-gen"
version = "0.1.0"
description = ""
authors = ["jacob-papermill <jacob@papermill.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
transformers = "^4.47.0"
datasets = "^3.2.0"
einops = "^0.8.0"
matplotlib = "^3.9.3"
accelerate = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
