[tool.poetry]
name = "face-gen"
version = "0.1.0"
description = ""
authors = ["jacob-papermill <jacob@papermill.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
torch = "^2.5.1"
torchvision = "^0.20.1"
datasets = "^3.2.0"
accelerate = "^1.2.1"
transformers = "^4.47.1"
matplotlib = "^3.10.0"
einops = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
